# ockam

./: Cargo.toml
examples/rust/mitm_node/: Cargo.toml  README.md
implementations/desktop/: README.md  package-lock.json  package.json
implementations/desktop/src-tauri/: Cargo.toml  tauri.conf.json
implementations/desktop/src-tauri/src/: main.rs
implementations/desktop/src/lib/: Nodes.svelte
implementations/desktop/src/routes/: +page.svelte
implementations/rust/ockam/ockam_api/src/: cli_state.rs  util.rs
implementations/rust/ockam/ockam_api/src/cli_state/: nodes.rs  vaults.rs
implementations/rust/ockam/ockam_api/src/cloud/: addon.rs  mod.rs  project.rs
implementations/rust/ockam/ockam_api/src/identity/: identity_service.rs
implementations/rust/ockam/ockam_api/src/nodes/: service.rs
implementations/rust/ockam/ockam_api/src/nodes/authority_node/: authority.rs
implementations/rust/ockam/ockam_command/src/: lib.rs
implementations/rust/ockam/ockam_command/src/enroll/: mod.rs
implementations/rust/ockam/ockam_command/src/flow_control/: add_consumer.rs
implementations/rust/ockam/ockam_command/src/identity/: mod.rs  show.rs
implementations/rust/ockam/ockam_command/src/node/: mod.rs
implementations/rust/ockam/ockam_command/src/project/: authenticate.rs  create.rs  enroll.rs  util.rs
implementations/rust/ockam/ockam_command/src/relay/: create.rs
implementations/rust/ockam/ockam_command/src/service/: start.rs
implementations/rust/ockam/ockam_command/src/util/: api.rs
implementations/rust/ockam/ockam_command/src/vault/: attach_key.rs  mod.rs
(+14 files in other folders)
